// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgPreviewer should change theme colors correctly when selecting a different theme from select element 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 100px;
}

.emotion-1 {
  position: fixed;
  top: 50px;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #577FFB;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
  margin: 50px 20px 30px 20px;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #3358CC;
}

.emotion-2:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-2:disabled svg {
  fill: #C0C0C0;
}

.emotion-2:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-5 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #23A248;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
  margin-right: 20px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #FFFFFF;
}

.emotion-8:hover:not(:disabled) {
  background-color: #148F39;
}

.emotion-8:active:not(:disabled) {
  background-color: #0A782A;
}

.emotion-8:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-8:disabled svg {
  fill: #C0C0C0;
}

.emotion-8:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-8:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #23A248;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #FFFFFF;
}

.emotion-12:hover:not(:disabled) {
  background-color: #148F39;
}

.emotion-12:active:not(:disabled) {
  background-color: #0A782A;
}

.emotion-12:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-12:disabled svg {
  fill: #C0C0C0;
}

.emotion-12:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-12:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-16 {
  max-width: 80vw;
}

.emotion-16 svg {
  max-width: 80vw;
  max-height: 80vh;
}

.emotion-17 {
  margin-bottom: 20px;
}

.emotion-18 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-18 svg {
  fill: #2E2E2E;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <select
        data-testid="select-theme-element"
        style="height: 26px; font-size: 16px;"
      >
        <option
          value="Docs Theme"
        >
          Docs Theme
        </option>
        <option
          value="Foundations Theme"
        >
          Foundations Theme
        </option>
        <option
          value="Patterns Theme"
        >
          Patterns Theme
        </option>
        <option
          value="Accessibility Theme"
        >
          Accessibility Theme
        </option>
        <option
          value="Guide Theme"
        >
          Guide Theme
        </option>
      </select>
      <button
        class="emotion-2"
        data-testid="button"
        type="button"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              SWITCH THEME: 
            </span>
          </span>
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              LIGHT
            </span>
          </span>
        </span>
      </button>
      <select
        style="height: 26px; font-size: 16px;"
      >
        <option>
          No SVG selected
        </option>
        <option
          value="0"
        >
          SvgName SVG
        </option>
      </select>
      <button
        class="emotion-8"
        data-testid="single-svg-button"
        type="button"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              Download single SVG
            </span>
          </span>
        </span>
      </button>
      <button
        class="emotion-12"
        data-testid="button"
        type="button"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              DOWNLOAD ALL SVGs
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      class="emotion-16"
    >
      <div
        class="emotion-17"
      >
        <p
          class="emotion-18"
        >
          SvgName
        </p>
        <div>
          <svg
            fill="none"
            height="839"
            viewBox="0 0 1490 839"
            width="1490"
            xmlns="http://www.w3.org/2000/svg"
          >
            

            <g
              clip-path="url(#mock-nk-1)"
            >
              

              <path
                d="M0 0.5H1490V838.5H0V0.5Z"
                fill="#F4F4F4"
              />
              

              <rect
                fill="#65BBC4"
                height="59"
                transform="matrix(-1 0 0 1 775 139.5)"
                width="131"
              />
              

              <path
                d="M671.954 176.922H678.888V179.634H668.59V159.149H671.954V176.922Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M680.58 171.44C680.58 169.809 680.914 168.365 681.583 167.107C682.272 165.85 683.196 164.877 684.357 164.189C685.537 163.482 686.835 163.128 688.252 163.128C689.53 163.128 690.642 163.384 691.586 163.895C692.55 164.386 693.317 165.005 693.888 165.752V163.394H697.281V179.634H693.888V177.217C693.317 177.983 692.54 178.622 691.557 179.133C690.573 179.643 689.452 179.899 688.193 179.899C686.796 179.899 685.517 179.545 684.357 178.838C683.196 178.111 682.272 177.109 681.583 175.832C680.914 174.535 680.58 173.071 680.58 171.44ZM693.888 171.499C693.888 170.379 693.652 169.406 693.18 168.581C692.727 167.756 692.127 167.127 691.38 166.695C690.632 166.262 689.826 166.046 688.96 166.046C688.094 166.046 687.288 166.262 686.54 166.695C685.793 167.107 685.183 167.726 684.711 168.552C684.258 169.357 684.032 170.32 684.032 171.44C684.032 172.56 684.258 173.542 684.711 174.387C685.183 175.232 685.793 175.881 686.54 176.333C687.308 176.765 688.114 176.981 688.96 176.981C689.826 176.981 690.632 176.765 691.38 176.333C692.127 175.9 692.727 175.272 693.18 174.446C693.652 173.601 693.888 172.619 693.888 171.499Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M705.624 166.135V175.124C705.624 175.733 705.762 176.175 706.037 176.45C706.332 176.706 706.824 176.834 707.512 176.834H709.578V179.634H706.922C705.408 179.634 704.247 179.28 703.44 178.573C702.634 177.865 702.231 176.716 702.231 175.124V166.135H700.313V163.394H702.231V159.356H705.624V163.394H709.578V166.135H705.624Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M727.58 171.116C727.58 171.725 727.54 172.275 727.462 172.766H715.039C715.137 174.063 715.619 175.104 716.485 175.89C717.35 176.676 718.413 177.069 719.672 177.069C721.481 177.069 722.76 176.313 723.508 174.8H727.137C726.645 176.293 725.75 177.521 724.452 178.484C723.173 179.427 721.58 179.899 719.672 179.899C718.118 179.899 716.721 179.555 715.482 178.867C714.262 178.16 713.298 177.177 712.59 175.92C711.901 174.643 711.557 173.169 711.557 171.499C711.557 169.829 711.891 168.365 712.56 167.107C713.249 165.83 714.203 164.848 715.423 164.16C716.662 163.472 718.078 163.128 719.672 163.128C721.206 163.128 722.573 163.462 723.773 164.13C724.973 164.799 725.908 165.742 726.576 166.96C727.245 168.159 727.58 169.544 727.58 171.116ZM724.068 170.055C724.049 168.817 723.606 167.825 722.74 167.078C721.875 166.331 720.803 165.958 719.524 165.958C718.363 165.958 717.37 166.331 716.544 167.078C715.718 167.805 715.226 168.797 715.068 170.055H724.068Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M736.792 179.899C735.513 179.899 734.362 179.673 733.339 179.221C732.336 178.749 731.539 178.121 730.949 177.335C730.359 176.529 730.044 175.635 730.005 174.653H733.487C733.546 175.34 733.87 175.92 734.46 176.392C735.07 176.843 735.828 177.069 736.733 177.069C737.677 177.069 738.405 176.893 738.916 176.539C739.447 176.166 739.713 175.694 739.713 175.124C739.713 174.515 739.418 174.063 738.828 173.768C738.257 173.474 737.342 173.149 736.083 172.796C734.864 172.462 733.87 172.137 733.103 171.823C732.336 171.509 731.667 171.027 731.097 170.379C730.546 169.73 730.27 168.876 730.27 167.815C730.27 166.95 730.526 166.164 731.038 165.457C731.549 164.73 732.277 164.16 733.221 163.747C734.185 163.335 735.287 163.128 736.526 163.128C738.375 163.128 739.86 163.6 740.982 164.543C742.123 165.467 742.732 166.734 742.811 168.345H739.447C739.388 167.618 739.093 167.039 738.562 166.606C738.031 166.174 737.313 165.958 736.408 165.958C735.523 165.958 734.844 166.125 734.372 166.459C733.9 166.793 733.664 167.235 733.664 167.785C733.664 168.217 733.821 168.581 734.136 168.876C734.451 169.17 734.834 169.406 735.287 169.583C735.739 169.74 736.408 169.947 737.293 170.202C738.474 170.516 739.437 170.841 740.185 171.175C740.952 171.489 741.611 171.961 742.162 172.589C742.713 173.218 742.998 174.053 743.018 175.095C743.018 176.018 742.762 176.843 742.25 177.57C741.739 178.297 741.011 178.867 740.067 179.28C739.142 179.693 738.051 179.899 736.792 179.899Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M750.577 166.135V175.124C750.577 175.733 750.715 176.175 750.99 176.45C751.285 176.706 751.777 176.834 752.465 176.834H754.531V179.634H751.875C750.361 179.634 749.2 179.28 748.393 178.573C747.587 177.865 747.184 176.716 747.184 175.124V166.135H745.266V163.394H747.184V159.356H750.577V163.394H754.531V166.135H750.577Z"
                fill="#FFFFFF"
              />
              

              <g
                filter="url(#mock-nk-1)"
                opacity="0.5"
              >
                

                <path
                  d="M382 699.5H1490V838.5H382V699.5Z"
                  fill="#EBF8F9"
                />
                

              </g>
              

              <g
                filter="url(#mock-nk-1)"
                opacity="0.5"
              >
                

                <path
                  d="M382 198.5H1490V227.5H382V198.5Z"
                  fill="#EBF8F9"
                />
                

              </g>
              

              <mask
                height="193"
                id="mock-nk-1"
                maskUnits="userSpaceOnUse"
                style="mask-type:alpha"
                width="193"
                x="85"
                y="108"
              >
                

                <circle
                  cx="181.872"
                  cy="204.345"
                  fill="#65BBC4"
                  r="95.9634"
                />
                

              </mask>
              

              <g
                mask="url(#mock-nk-1)"
              >
                

                <circle
                  cx="181.872"
                  cy="140.368"
                  fill="#EBF8F9"
                  opacity="0.5"
                  r="95.9634"
                />
                

              </g>
              

              <mask
                height="192"
                id="mock-nk-1"
                maskUnits="userSpaceOnUse"
                style="mask-type:alpha"
                width="193"
                x="85"
                y="498"
              >
                

                <circle
                  cx="181.872"
                  cy="593.963"
                  fill="#65BBC4"
                  r="95.9634"
                />
                

              </mask>
              

              <g
                mask="url(#mock-nk-1)"
              >
                

                <circle
                  cx="181.872"
                  cy="529.986"
                  fill="#EBF8F9"
                  opacity="0.5"
                  r="95.9634"
                />
                

              </g>
              

              <mask
                height="193"
                id="mock-nk-1"
                maskUnits="userSpaceOnUse"
                style="mask-type:alpha"
                width="193"
                x="792"
                y="531"
              >
                

                <circle
                  cx="888.608"
                  cy="627.294"
                  fill="#65BBC4"
                  r="95.9634"
                />
                

              </mask>
              

              <g
                mask="url(#mock-nk-1)"
              >
                

                <circle
                  cx="888.608"
                  cy="563.317"
                  fill="#EBF8F9"
                  opacity="0.5"
                  r="95.9634"
                />
                

              </g>
              

            </g>
            

            <defs>
              

              <filter
                color-interpolation-filters="sRGB"
                filterUnits="userSpaceOnUse"
                height="175"
                id="mock-nk-1"
                width="1132"
                x="370"
                y="687.5"
              >
                

                <feflood
                  flood-opacity="0"
                  result="BackgroundImageFix"
                />
                

                <fecolormatrix
                  in="SourceAlpha"
                  result="hardAlpha"
                  type="matrix"
                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                />
                

                <feoffset
                  dy="20"
                />
                

                <fegaussianblur
                  stdDeviation="2"
                />
                

                <fecomposite
                  in2="hardAlpha"
                  operator="out"
                />
                

                <fecolormatrix
                  type="matrix"
                  values="0 0 0 0 0.476494 0 0 0 0 0.392157 0 0 0 0 0.937255 0 0 0 1 0"
                />
                

                <feblend
                  in2="BackgroundImageFix"
                  mode="normal"
                  result="effect1_dropShadow_304_63"
                />
                

                <feblend
                  in="SourceGraphic"
                  in2="effect1_dropShadow_304_63"
                  mode="normal"
                  result="shape"
                />
                

                <fegaussianblur
                  result="effect2_foregroundBlur_304_63"
                  stdDeviation="6"
                />
                

              </filter>
              

              <filter
                color-interpolation-filters="sRGB"
                filterUnits="userSpaceOnUse"
                height="65"
                id="mock-nk-1"
                width="1132"
                x="370"
                y="186.5"
              >
                

                <feflood
                  flood-opacity="0"
                  result="BackgroundImageFix"
                />
                

                <fecolormatrix
                  in="SourceAlpha"
                  result="hardAlpha"
                  type="matrix"
                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                />
                

                <feoffset
                  dy="20"
                />
                

                <fegaussianblur
                  stdDeviation="2"
                />
                

                <fecomposite
                  in2="hardAlpha"
                  operator="out"
                />
                

                <fecolormatrix
                  type="matrix"
                  values="0 0 0 0 0.476494 0 0 0 0 0.392157 0 0 0 0 0.937255 0 0 0 1 0"
                />
                

                <feblend
                  in2="BackgroundImageFix"
                  mode="normal"
                  result="effect1_dropShadow_304_63"
                />
                

                <feblend
                  in="SourceGraphic"
                  in2="effect1_dropShadow_304_63"
                  mode="normal"
                  result="shape"
                />
                

                <fegaussianblur
                  result="effect2_foregroundBlur_304_63"
                  stdDeviation="6"
                />
                

              </filter>
              

              <clippath
                id="mock-nk-1"
              >
                

                <rect
                  fill="white"
                  height="838"
                  transform="translate(0 0.5)"
                  width="1490"
                />
                

              </clippath>
              

            </defs>
            

          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SvgPreviewer should render correctly when not receiving any data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 100px;
}

.emotion-1 {
  position: fixed;
  top: 50px;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 8px;
  color: #C0C0C0;
  margin: 0;
  margin: 50px 20px 30px 20px;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-5 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 8px;
  color: #C0C0C0;
  margin: 0;
  margin-right: 20px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #C0C0C0;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 8px;
  color: #C0C0C0;
  margin: 0;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #C0C0C0;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <select
            data-testid="select-theme-element"
            disabled=""
            style="height: 26px; font-size: 16px;"
          >
            <option
              value="Docs Theme"
            >
              Docs Theme
            </option>
            <option
              value="Foundations Theme"
            >
              Foundations Theme
            </option>
            <option
              value="Patterns Theme"
            >
              Patterns Theme
            </option>
            <option
              value="Accessibility Theme"
            >
              Accessibility Theme
            </option>
            <option
              value="Guide Theme"
            >
              Guide Theme
            </option>
          </select>
          <button
            class="emotion-2"
            data-testid="button"
            disabled=""
            type="button"
          >
            <span
              class="emotion-3"
            >
              <span
                class="emotion-4"
              >
                <span
                  class="emotion-5"
                >
                  SWITCH THEME: 
                </span>
              </span>
              <span
                class="emotion-4"
              >
                <span
                  class="emotion-5"
                >
                  LIGHT
                </span>
              </span>
            </span>
          </button>
          <select
            disabled=""
            style="height: 26px; font-size: 16px;"
          >
            <option>
              No SVG selected
            </option>
          </select>
          <button
            class="emotion-8"
            data-testid="single-svg-button"
            disabled=""
            type="button"
          >
            <span
              class="emotion-3"
            >
              <span
                class="emotion-4"
              >
                <span
                  class="emotion-5"
                >
                  Download single SVG
                </span>
              </span>
            </span>
          </button>
          <button
            class="emotion-12"
            data-testid="button"
            disabled=""
            type="button"
          >
            <span
              class="emotion-3"
            >
              <span
                class="emotion-4"
              >
                <span
                  class="emotion-5"
                >
                  DOWNLOAD ALL SVGs
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="nk-layer-organizer"
    />
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 100px;
}

.emotion-1 {
  position: fixed;
  top: 50px;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 8px;
  color: #C0C0C0;
  margin: 0;
  margin: 50px 20px 30px 20px;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-5 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 8px;
  color: #C0C0C0;
  margin: 0;
  margin-right: 20px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #C0C0C0;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F4F4F4;
  border-radius: 8px;
  color: #C0C0C0;
  margin: 0;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #C0C0C0;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <select
          data-testid="select-theme-element"
          disabled=""
          style="height: 26px; font-size: 16px;"
        >
          <option
            value="Docs Theme"
          >
            Docs Theme
          </option>
          <option
            value="Foundations Theme"
          >
            Foundations Theme
          </option>
          <option
            value="Patterns Theme"
          >
            Patterns Theme
          </option>
          <option
            value="Accessibility Theme"
          >
            Accessibility Theme
          </option>
          <option
            value="Guide Theme"
          >
            Guide Theme
          </option>
        </select>
        <button
          class="emotion-2"
          data-testid="button"
          disabled=""
          type="button"
        >
          <span
            class="emotion-3"
          >
            <span
              class="emotion-4"
            >
              <span
                class="emotion-5"
              >
                SWITCH THEME: 
              </span>
            </span>
            <span
              class="emotion-4"
            >
              <span
                class="emotion-5"
              >
                LIGHT
              </span>
            </span>
          </span>
        </button>
        <select
          disabled=""
          style="height: 26px; font-size: 16px;"
        >
          <option>
            No SVG selected
          </option>
        </select>
        <button
          class="emotion-8"
          data-testid="single-svg-button"
          disabled=""
          type="button"
        >
          <span
            class="emotion-3"
          >
            <span
              class="emotion-4"
            >
              <span
                class="emotion-5"
              >
                Download single SVG
              </span>
            </span>
          </span>
        </button>
        <button
          class="emotion-12"
          data-testid="button"
          disabled=""
          type="button"
        >
          <span
            class="emotion-3"
          >
            <span
              class="emotion-4"
            >
              <span
                class="emotion-5"
              >
                DOWNLOAD ALL SVGs
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SvgPreviewer should render correctly when receiving one svg data 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 100px;
}

.emotion-1 {
  position: fixed;
  top: 50px;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #577FFB;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
  margin: 50px 20px 30px 20px;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #3358CC;
}

.emotion-2:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-2:disabled svg {
  fill: #C0C0C0;
}

.emotion-2:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-2:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-2 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-5 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #23A248;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
  margin-right: 20px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #FFFFFF;
}

.emotion-8:hover:not(:disabled) {
  background-color: #148F39;
}

.emotion-8:active:not(:disabled) {
  background-color: #0A782A;
}

.emotion-8:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-8:disabled svg {
  fill: #C0C0C0;
}

.emotion-8:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-8:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #23A248;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #FFFFFF;
}

.emotion-12:hover:not(:disabled) {
  background-color: #148F39;
}

.emotion-12:active:not(:disabled) {
  background-color: #0A782A;
}

.emotion-12:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-12:disabled svg {
  fill: #C0C0C0;
}

.emotion-12:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-12:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-12 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-16 {
  max-width: 80vw;
}

.emotion-16 svg {
  max-width: 80vw;
  max-height: 80vh;
}

.emotion-17 {
  margin-bottom: 20px;
}

.emotion-18 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-18 svg {
  fill: #2E2E2E;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <select
        data-testid="select-theme-element"
        style="height: 26px; font-size: 16px;"
      >
        <option
          value="Docs Theme"
        >
          Docs Theme
        </option>
        <option
          value="Foundations Theme"
        >
          Foundations Theme
        </option>
        <option
          value="Patterns Theme"
        >
          Patterns Theme
        </option>
        <option
          value="Accessibility Theme"
        >
          Accessibility Theme
        </option>
        <option
          value="Guide Theme"
        >
          Guide Theme
        </option>
      </select>
      <button
        class="emotion-2"
        data-testid="button"
        type="button"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              SWITCH THEME: 
            </span>
          </span>
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              LIGHT
            </span>
          </span>
        </span>
      </button>
      <select
        style="height: 26px; font-size: 16px;"
      >
        <option>
          No SVG selected
        </option>
        <option
          value="0"
        >
          SvgName SVG
        </option>
      </select>
      <button
        class="emotion-8"
        data-testid="single-svg-button"
        type="button"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              Download single SVG
            </span>
          </span>
        </span>
      </button>
      <button
        class="emotion-12"
        data-testid="button"
        type="button"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              DOWNLOAD ALL SVGs
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      class="emotion-16"
    >
      <div
        class="emotion-17"
      >
        <p
          class="emotion-18"
        >
          SvgName
        </p>
        <div>
          <svg
            fill="none"
            height="839"
            viewBox="0 0 1490 839"
            width="1490"
            xmlns="http://www.w3.org/2000/svg"
          >
            

            <g
              clip-path="url(#mock-nk-1)"
            >
              

              <path
                d="M0 0.5H1490V838.5H0V0.5Z"
                fill="#F4F4F4"
              />
              

              <rect
                fill="#577FFB"
                height="59"
                transform="matrix(-1 0 0 1 775 139.5)"
                width="131"
              />
              

              <path
                d="M671.954 176.922H678.888V179.634H668.59V159.149H671.954V176.922Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M680.58 171.44C680.58 169.809 680.914 168.365 681.583 167.107C682.272 165.85 683.196 164.877 684.357 164.189C685.537 163.482 686.835 163.128 688.252 163.128C689.53 163.128 690.642 163.384 691.586 163.895C692.55 164.386 693.317 165.005 693.888 165.752V163.394H697.281V179.634H693.888V177.217C693.317 177.983 692.54 178.622 691.557 179.133C690.573 179.643 689.452 179.899 688.193 179.899C686.796 179.899 685.517 179.545 684.357 178.838C683.196 178.111 682.272 177.109 681.583 175.832C680.914 174.535 680.58 173.071 680.58 171.44ZM693.888 171.499C693.888 170.379 693.652 169.406 693.18 168.581C692.727 167.756 692.127 167.127 691.38 166.695C690.632 166.262 689.826 166.046 688.96 166.046C688.094 166.046 687.288 166.262 686.54 166.695C685.793 167.107 685.183 167.726 684.711 168.552C684.258 169.357 684.032 170.32 684.032 171.44C684.032 172.56 684.258 173.542 684.711 174.387C685.183 175.232 685.793 175.881 686.54 176.333C687.308 176.765 688.114 176.981 688.96 176.981C689.826 176.981 690.632 176.765 691.38 176.333C692.127 175.9 692.727 175.272 693.18 174.446C693.652 173.601 693.888 172.619 693.888 171.499Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M705.624 166.135V175.124C705.624 175.733 705.762 176.175 706.037 176.45C706.332 176.706 706.824 176.834 707.512 176.834H709.578V179.634H706.922C705.408 179.634 704.247 179.28 703.44 178.573C702.634 177.865 702.231 176.716 702.231 175.124V166.135H700.313V163.394H702.231V159.356H705.624V163.394H709.578V166.135H705.624Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M727.58 171.116C727.58 171.725 727.54 172.275 727.462 172.766H715.039C715.137 174.063 715.619 175.104 716.485 175.89C717.35 176.676 718.413 177.069 719.672 177.069C721.481 177.069 722.76 176.313 723.508 174.8H727.137C726.645 176.293 725.75 177.521 724.452 178.484C723.173 179.427 721.58 179.899 719.672 179.899C718.118 179.899 716.721 179.555 715.482 178.867C714.262 178.16 713.298 177.177 712.59 175.92C711.901 174.643 711.557 173.169 711.557 171.499C711.557 169.829 711.891 168.365 712.56 167.107C713.249 165.83 714.203 164.848 715.423 164.16C716.662 163.472 718.078 163.128 719.672 163.128C721.206 163.128 722.573 163.462 723.773 164.13C724.973 164.799 725.908 165.742 726.576 166.96C727.245 168.159 727.58 169.544 727.58 171.116ZM724.068 170.055C724.049 168.817 723.606 167.825 722.74 167.078C721.875 166.331 720.803 165.958 719.524 165.958C718.363 165.958 717.37 166.331 716.544 167.078C715.718 167.805 715.226 168.797 715.068 170.055H724.068Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M736.792 179.899C735.513 179.899 734.362 179.673 733.339 179.221C732.336 178.749 731.539 178.121 730.949 177.335C730.359 176.529 730.044 175.635 730.005 174.653H733.487C733.546 175.34 733.87 175.92 734.46 176.392C735.07 176.843 735.828 177.069 736.733 177.069C737.677 177.069 738.405 176.893 738.916 176.539C739.447 176.166 739.713 175.694 739.713 175.124C739.713 174.515 739.418 174.063 738.828 173.768C738.257 173.474 737.342 173.149 736.083 172.796C734.864 172.462 733.87 172.137 733.103 171.823C732.336 171.509 731.667 171.027 731.097 170.379C730.546 169.73 730.27 168.876 730.27 167.815C730.27 166.95 730.526 166.164 731.038 165.457C731.549 164.73 732.277 164.16 733.221 163.747C734.185 163.335 735.287 163.128 736.526 163.128C738.375 163.128 739.86 163.6 740.982 164.543C742.123 165.467 742.732 166.734 742.811 168.345H739.447C739.388 167.618 739.093 167.039 738.562 166.606C738.031 166.174 737.313 165.958 736.408 165.958C735.523 165.958 734.844 166.125 734.372 166.459C733.9 166.793 733.664 167.235 733.664 167.785C733.664 168.217 733.821 168.581 734.136 168.876C734.451 169.17 734.834 169.406 735.287 169.583C735.739 169.74 736.408 169.947 737.293 170.202C738.474 170.516 739.437 170.841 740.185 171.175C740.952 171.489 741.611 171.961 742.162 172.589C742.713 173.218 742.998 174.053 743.018 175.095C743.018 176.018 742.762 176.843 742.25 177.57C741.739 178.297 741.011 178.867 740.067 179.28C739.142 179.693 738.051 179.899 736.792 179.899Z"
                fill="#FFFFFF"
              />
              

              <path
                d="M750.577 166.135V175.124C750.577 175.733 750.715 176.175 750.99 176.45C751.285 176.706 751.777 176.834 752.465 176.834H754.531V179.634H751.875C750.361 179.634 749.2 179.28 748.393 178.573C747.587 177.865 747.184 176.716 747.184 175.124V166.135H745.266V163.394H747.184V159.356H750.577V163.394H754.531V166.135H750.577Z"
                fill="#FFFFFF"
              />
              

              <g
                filter="url(#mock-nk-1)"
                opacity="0.5"
              >
                

                <path
                  d="M382 699.5H1490V838.5H382V699.5Z"
                  fill="#E0E7FF"
                />
                

              </g>
              

              <g
                filter="url(#mock-nk-1)"
                opacity="0.5"
              >
                

                <path
                  d="M382 198.5H1490V227.5H382V198.5Z"
                  fill="#E0E7FF"
                />
                

              </g>
              

              <mask
                height="193"
                id="mock-nk-1"
                maskUnits="userSpaceOnUse"
                style="mask-type:alpha"
                width="193"
                x="85"
                y="108"
              >
                

                <circle
                  cx="181.872"
                  cy="204.345"
                  fill="#577FFB"
                  r="95.9634"
                />
                

              </mask>
              

              <g
                mask="url(#mock-nk-1)"
              >
                

                <circle
                  cx="181.872"
                  cy="140.368"
                  fill="#E0E7FF"
                  opacity="0.5"
                  r="95.9634"
                />
                

              </g>
              

              <mask
                height="192"
                id="mock-nk-1"
                maskUnits="userSpaceOnUse"
                style="mask-type:alpha"
                width="193"
                x="85"
                y="498"
              >
                

                <circle
                  cx="181.872"
                  cy="593.963"
                  fill="#577FFB"
                  r="95.9634"
                />
                

              </mask>
              

              <g
                mask="url(#mock-nk-1)"
              >
                

                <circle
                  cx="181.872"
                  cy="529.986"
                  fill="#E0E7FF"
                  opacity="0.5"
                  r="95.9634"
                />
                

              </g>
              

              <mask
                height="193"
                id="mock-nk-1"
                maskUnits="userSpaceOnUse"
                style="mask-type:alpha"
                width="193"
                x="792"
                y="531"
              >
                

                <circle
                  cx="888.608"
                  cy="627.294"
                  fill="#577FFB"
                  r="95.9634"
                />
                

              </mask>
              

              <g
                mask="url(#mock-nk-1)"
              >
                

                <circle
                  cx="888.608"
                  cy="563.317"
                  fill="#E0E7FF"
                  opacity="0.5"
                  r="95.9634"
                />
                

              </g>
              

            </g>
            

            <defs>
              

              <filter
                color-interpolation-filters="sRGB"
                filterUnits="userSpaceOnUse"
                height="175"
                id="mock-nk-1"
                width="1132"
                x="370"
                y="687.5"
              >
                

                <feflood
                  flood-opacity="0"
                  result="BackgroundImageFix"
                />
                

                <fecolormatrix
                  in="SourceAlpha"
                  result="hardAlpha"
                  type="matrix"
                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                />
                

                <feoffset
                  dy="20"
                />
                

                <fegaussianblur
                  stdDeviation="2"
                />
                

                <fecomposite
                  in2="hardAlpha"
                  operator="out"
                />
                

                <fecolormatrix
                  type="matrix"
                  values="0 0 0 0 0.476494 0 0 0 0 0.392157 0 0 0 0 0.937255 0 0 0 1 0"
                />
                

                <feblend
                  in2="BackgroundImageFix"
                  mode="normal"
                  result="effect1_dropShadow_304_63"
                />
                

                <feblend
                  in="SourceGraphic"
                  in2="effect1_dropShadow_304_63"
                  mode="normal"
                  result="shape"
                />
                

                <fegaussianblur
                  result="effect2_foregroundBlur_304_63"
                  stdDeviation="6"
                />
                

              </filter>
              

              <filter
                color-interpolation-filters="sRGB"
                filterUnits="userSpaceOnUse"
                height="65"
                id="mock-nk-1"
                width="1132"
                x="370"
                y="186.5"
              >
                

                <feflood
                  flood-opacity="0"
                  result="BackgroundImageFix"
                />
                

                <fecolormatrix
                  in="SourceAlpha"
                  result="hardAlpha"
                  type="matrix"
                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                />
                

                <feoffset
                  dy="20"
                />
                

                <fegaussianblur
                  stdDeviation="2"
                />
                

                <fecomposite
                  in2="hardAlpha"
                  operator="out"
                />
                

                <fecolormatrix
                  type="matrix"
                  values="0 0 0 0 0.476494 0 0 0 0 0.392157 0 0 0 0 0.937255 0 0 0 1 0"
                />
                

                <feblend
                  in2="BackgroundImageFix"
                  mode="normal"
                  result="effect1_dropShadow_304_63"
                />
                

                <feblend
                  in="SourceGraphic"
                  in2="effect1_dropShadow_304_63"
                  mode="normal"
                  result="shape"
                />
                

                <fegaussianblur
                  result="effect2_foregroundBlur_304_63"
                  stdDeviation="6"
                />
                

              </filter>
              

              <clippath
                id="mock-nk-1"
              >
                

                <rect
                  fill="white"
                  height="838"
                  transform="translate(0 0.5)"
                  width="1490"
                />
                

              </clippath>
              

            </defs>
            

          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
